# robust_self_calibration

./: README.md  env.yaml
cxx/: CMakeLists.txt  iterative_focal.cpp  setup.py
datasets/: definitions.py  prepare_eth3D.py  prepare_im.py  prepare_notre_dame.py  prepare_single.py  prepare_single_aachen.py
eval/: im_analysis.ipynb  manager.py  onefocal.py  rfd.py  single.py  thresh.py  uncal.py  weights.py
eval/synth/: convergence.py  single_box_plot.py  single_convergence.py  synth_scenarios.py  uncal_box_plot.py
matlab_utils/: engine_calls.py  f1_f2_from_F.m  focal_from_F.m  gj.c  gj.mexa64  gj.mexw64  solver_focal_minimization_iter.m  test_cxx.py
methods/: ba.py  base.py  fetzer.py  hartley.py  kanatani.py  melanitis.py  ours.py  voting.py
utils/: geometry.py  matching.py  plot.py
